# django-apod

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
apod/: asgi.py  settings.py  urls.py  wsgi.py
apod/settings/: base.py  local.py.tmpl  test.py
images/: admin.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_apodimage_image_bytes.py  0003_alter_apodimage_hdurl.py  0004_remove_apodimage_image_bytes.py  0005_apodimage_created_at_apodimage_updated_at.py  0006_tag_apodimage_tags.py
