[tool.poetry]
name = "django-apod"
version = "0.1.0"
description = "Django application to fetch images from the APOD API"
authors = ["Leah Rivkin <30099399+lrivkin@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
Django = "5.0.6"
djangorestframework = "3.15.1"
asgiref = "3.8.1"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
idna = "3.7"
sqlparse = "0.5.0"
urllib3 = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
